Added full CRUD on skill
